--- a/UltimateAntibot-spigot/src/main/resources/plugin.yml
+++ b/UltimateAntibot-spigot/src/main/resources/plugin.yml
@@ -1,7 +1,8 @@
 name: UltimateAntiBot
 version: ${project.version}
 main: me.kr1s_d.ultimateantibot.UltimateAntiBotSpigot
-api-version: 1.13
+api-version: 1.21
+folia-supported: true
 authors: [ Kr1S_D ]
 description: Another antibot plugin!
 load: STARTUP
