--- a/UltimateAntibot-spigot/pom.xml
+++ b/UltimateAntibot-spigot/pom.xml
@@ -110,5 +110,11 @@
             <version>2.10.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.2.7.Final</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
